# drive-by-wire-chassis

./: .gitignore  CHANGELOG.md  README.md  STM32F407_Ackermann_Chassis_strict_mssc.hex  mssc_steering_can.ps1
ArduinoNano_EWM22_LoRa_HandController/: ArduinoNano_EWM22_LoRa_HandController.ino  LoRa_radio_config_examples.txt  README.md
STM线控控制文件夹/: STM32F407.ioc  cubemx_generate.txt
STM线控控制文件夹/STM32F407_Ackermann_Chassis/: .cproject  .mxproject  .project  STM32F407ZGTX_FLASH.ld  STM32F407_Ackermann_Chassis.ioc
UniApp_WireControl_MobileApp/: App.vue  manifest.json  pages.json  uni.scss
UniApp_WireControl_MobileApp/components/: AppSvgIcon.vue
UniApp_WireControl_MobileApp/utils/: bridge-session-sync.js  bridge-status.js  chassis-protocol.js  device-profiles.js  ewm22-ble-bridge.js  icon-map.js  session-state.js
_pdf_txt/: 无刷电机伺服控制器MSSC通讯协议及寄存器说明V1.0.txt  无刷电机驱动器MSSC CAN通讯协议说明V1.0.txt  无刷电机驱动器MSSD-60EHB_2D  CAN通讯协议及寄存器说明书V1.0.txt
docs/: ros2_humble_architecture.md
ros2_ws/src/drive_by_wire_chassis_bridge/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
ros2_ws/src/drive_by_wire_chassis_bridge/drive_by_wire_chassis_bridge/: __init__.py  cmd_vel_usb_bridge.py
ros2_ws/src/drive_by_wire_chassis_bridge/launch/: cmd_vel_usb_bridge.launch.py
ros2_ws/src/drive_by_wire_chassis_bridge/msg/: VehicleStatus.msg
参考文件/: E22-T系列模块_UserManual_CN.txt  EWM22A-xxxBWL22S_UserManual_CN_V1.0.txt
调试脚本/: mssc_steering_can.ps1  mssd_dual_wheel_can.ps1  stm32_get_status.ps1  usb_can_rear_drive_steering_test.html  usb_control_smoke_test.py
项目资料/: STM32CubeIDE_UM1718.txt  STM32F407_param_tuning_design.md  STM32F407_旧版根目录参考.ioc
(+120 files in other folders)
